--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -2,7 +2,7 @@
     "files": [],
     "references": [
       {
-        "path": "./tsconfig.app.json"
+        "path": "./jsconfig.app.json"
       }
     ],
     "compilerOptions": {
@@ -11,4 +11,4 @@
         "@/*": ["./src/*"]
       }
     }
-}  
+}
