--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "parthThaps",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "ejs-layout": "^1.0.15",
     "express": "^4.18.3",
